<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/my_gradient_drawable">


    <LinearLayout
        android:id="@+id/headerLO"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="28dp"
        android:paddingBottom="28dp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/locationTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_york_us"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/updateTimeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/updated_at_24_09_2022_10_29_am"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

    <TextView
        android:id="@+id/weatherCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_sky"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerLO"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_17_c"
        app:layout_constraintTop_toBottomOf="@id/weatherCondition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="12dp"
        android:textColor="@color/white"
        android:textSize="112sp"/>

    <TextView
        android:id="@+id/lowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/low_14_c"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/highTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_19_c"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@id/temp"
        app:layout_constraintTop_toBottomOf="@id/temp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/highTemp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/purple_200"
                android:orientation="vertical"
                >

                <ImageView
                    android:id="@+id/sunRiseImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/sunrise"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/sunriseTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sunrise"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sunRiseTimeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sunrise_time"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/purple_200"
                android:layout_margin="8dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sunsetImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/sunset"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/sunsetTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/sunset"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/sunsetTimeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/_06_50_pm"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_margin="8dp"
                android:background="@color/purple_200">


                <ImageView
                    android:id="@+id/windImageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/wind"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/windTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="Wind"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="HardcodedText,TextContrastCheck" />

                <TextView
                    android:id="@+id/windSpeed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/_0_45"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/purple_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/pressureImageView3"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/pressure"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/pressureTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/pressureValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/_1018"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/purple_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/humidityImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/humidity"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/humidityTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/humidityValueTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/_70"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/refreshLO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@color/purple_200"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/refreshImageView"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:padding="12dp"
                    app:srcCompat="@drawable/ic_baseline_refresh_24"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription,ImageContrastCheck" />

                <TextView
                    android:id="@+id/refreshTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/refresh"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/DataTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:text="@string/data"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>